--- a/index.html
+++ b/index.html
@@ -20,17 +20,17 @@
                 <button class="btn btn-sm me-2" type="button"><a href="#direc" class=" mybtn">Franchise</a></button>
                 <button class="btn btn-primary" type="button"><a href="#direc" class="text-white mybtn">Contact Us</a></button>
                 </form>
-          </nav><br><br>
-            <div class="row justify-content-end mb-2">
-                <div class="p-2 col-lg-4">
+          </nav><br><br><br>
+            <div class="row justify-content-end mb-2 mt-5 mt-lg-0">
+                <div class="p-2 col-lg-4 ">
                     <div class="d-flex flex-column align-items-start justify-content-end  ">
-                        <div class="p-2  mb-1">
-                            <h1>Welcome to Norway Kids </h1>
+                        <div class=" px-1 mb-1">
+                            <h1> Welcome to Norway Kids </h1>
                         </div>
-                        <div class="p-2 mb-3">
-                            <h4 class="">To nurture your future!</h4>
+                        <div class="px-1 mb-3">
+                            <h4 class=""><a href="https://git.io/typing-svg"><img src="https://readme-typing-svg.demolab.com?font=Fira+Code&weight=600&size=25&duration=4000&pause=500&color=F72518&random=false&width=435&lines=To+nurture+your+future!" alt="Typing SVG" /></a></h4>
                         </div>
-                        <div class="p-2 mb-3">
+                        <div class="px-1 mb-3">
                             <button class="btn btn-primary" type="button"><a href="./contact.html" class="text-white mybtn">Contact Us</a></button>
                         </div>
                       </div>
