--- a/index.html
+++ b/index.html
@@ -11,24 +11,24 @@
 </head>
 <body>
     <!-- <div class="container-fluid m-1 "> -->
-        <div class="container-fluid my px-0">
+        <div class="container-fluid my p-0" id="home">
             <nav class="navbar justify-content-around bg-white fixed-top">
                 <a ><img width="250px" height="40px" src="logo.png" alt="logo image"></a>
-                <form class="justify-content-end ms-5">
-                <button class="btn btn-sm me-2" type="button"><a href="#direc" class=" mybtn">Home</a></button>
-                <button class="btn btn-sm me-2" type="button"><a href="#about" class=" mybtn">About Us</a></button>
-                <button class="btn btn-sm me-2" type="button"><a href="#direc" class=" mybtn">Franchise</a></button>
-                <button class="btn btn-primary" type="button"><a href="#direc" class="text-white mybtn">Contact Us</a></button>
+                <form class=" d-flex justify-content-center ">
+                <button class="btn btn-sm me-2" type="button"><a href="#home" class=" mybtn">Home</a></button>
+                <button class="btn btn-sm me-2" type="button"><a href="#aboutUs" class=" mybtn">About Us</a></button>
+                <button class="btn btn-sm me-2" type="button"><a href="#franchise" class=" mybtn">Franchise</a></button>
+                <button class="btn btn-primary" type="button"><a href="#contactUs" class="text-white mybtn">Contact Us</a></button>
                 </form>
           </nav><br><br><br>
-            <div class="row justify-content-end mb-2 mt-5 mt-lg-0">
+            <div class="row justify-content-center mb-2 mt-5 mt-lg-0 welcome" >
                 <div class="p-2 col-lg-4 ">
                     <div class="d-flex flex-column align-items-start justify-content-end  ">
                         <div class=" px-1 mb-1">
-                            <h1> Welcome to Norway Kids </h1>
+                            <h1 class="main"> Welcome to Norway Kids </h1>
                         </div>
                         <div class="px-1 mb-3">
-                            <h4 class=""><a href="https://git.io/typing-svg"><img src="https://readme-typing-svg.demolab.com?font=Fira+Code&weight=600&size=25&duration=4000&pause=500&color=F72518&random=false&width=435&lines=To+nurture+your+future!" alt="Typing SVG" /></a></h4>
+                            <h4 class=""><img src="https://readme-typing-svg.demolab.com?font=Fira+Code&weight=600&size=25&duration=4000&pause=500&color=F72518&random=false&width=435&lines=To+nurture+your+future!" alt="To nurture your future" /></h4>
                         </div>
                         <div class="px-1 mb-3">
                             <button class="btn btn-primary" type="button"><a href="./contact.html" class="text-white mybtn">Contact Us</a></button>
@@ -42,7 +42,7 @@
         </div>
     <!-- </div> -->
     <img src="./Frame.png" alt="" width="100%" height="350px" style="top:0;margin-top:-350px;" >
-    <div class="container-fluid row justify-content-center mt-5" id="about">
+    <div class="container-fluid row justify-content-center mt-5" id="aboutUs">
         <img class="headimg2 col-lg-5 " width="350px" height="600px" src="about.jpg">
         <div class="d-flex flex-column justify-content-start col-lg-4 ms-4 my-auto ">
             <div class="p-2  mb-3">
@@ -58,18 +58,21 @@
     </div> 
     <div class="container-fluid bg-dark wave">
     </div>
-    <div class="container-fluid row justify-content-center mb-5 pb-2 bg-dark mx-0 " id="direc">
-        <img class="headimg2 col-lg-5" max-width="200px" height="350px" src="castle.jpeg">
-        <div class="d-flex flex-column justify-content-start col-lg-3 bg-light" style="max-height: 330px;">
+    <div class="container-fluid mb-5 py-3 bg-dark" id="franchise">4
+        <div class="container-fluid row align-items-center justify-content-center franchise text-center text-white  " >
+            <h1 class="">Franchise</h1>
+            <h3>coming soon...</h3>
+        </div>
+        <!-- <div class="d-flex flex-column justify-content-start col-lg-3 bg-light" style="max-height: 330px;">
             <div class="p-2  my-3">
                 <h6 class="">Visit BrainBunny Juniors today and witness the magic of early childhood education. Enroll your child in an enriching, joy-filled learning experience that will prepare them for a lifetime of achievement and happiness.</h6>
             </div>
             <div class="p-2 mb-3 text-end">
                - Alok Yadav<br>(Director) 
             </div>
-        </div>
+        </div> -->
     </div>
-    <div class="p-3 mybg text-white">
+    <div class="p-3 mybg text-white" id="contactUs">
         <div class="row justify-content-center my-4">
             <div class="p-2 col-lg-3">
                 <div class="d-flex flex-column align-items-start justify-content-end  ">
@@ -77,7 +80,7 @@
                         <h6>About Us</h6>
                     </div>
                     <div class="p-2 ">
-                        <p class="fs-6 mb-0  foottext">At BrainBunny Juniors, we believe that every child is a unique individual with boundless potential.</p>
+                        <p class="fs-6 mb-0  foottext">At Norway Kids, we believe that every child is a unique individual with boundless potential.</p>
                     </div>
                   </div>
             </div>
@@ -90,12 +93,10 @@
                         <p class="fs-6 mb-0 foottext">Office Address</p>
                     </div>
                     <div class="p-1">
-                        <p class="fs-6 mb-0 foottext">Office Suit No.1409, 13th Floor, Galaxy Blue Sapphire Plaza, Greater Noida West -201309
-
-                        </p>
+                        <p class="fs-6 mb-0 foottext">New Delhi</p>
                     </div>
                     <div class="p-1 ">
-                        <p class="fs-6 mb-0 foottext">Mobile: +91-7011232358</p>
+                        <p class="fs-6 mb-0 foottext">Mobile: +91-12345XXXX</p>
                     </div>
                     <div class="p-1">
                         <p class="fs-6 mb-0 foottext">Email: norwaykidsindia@gmail.com</p>
