--- a/index.html
+++ b/index.html
@@ -3,47 +3,48 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Norway Kids</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/4810801808.js" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+    <script defer src="./script.js"></script>
 </head>
 <body>
     <!-- <div class="container-fluid m-1 "> -->
         <div class="container-fluid my p-0" id="home">
             <nav class="navbar justify-content-around bg-white fixed-top">
-                <a ><img width="250px" height="40px" src="logo.png" alt="logo image"></a>
-                <form class=" d-flex justify-content-center ">
-                <button class="btn btn-sm me-2" type="button"><a href="#home" class=" mybtn">Home</a></button>
-                <button class="btn btn-sm me-2" type="button"><a href="#aboutUs" class=" mybtn">About Us</a></button>
-                <button class="btn btn-sm me-2" type="button"><a href="#franchise" class=" mybtn">Franchise</a></button>
-                <button class="btn btn-primary" type="button"><a href="#contactUs" class="text-white mybtn">Contact Us</a></button>
-                </form>
+                <a ><img width="300px" height="60px" src="./images/logo.png" alt="logo image"></a>
+                <div class=" d-flex justify-content-center ">
+                <button class="btn btn-sm me-2" style="border: none;"><a href="#home" class=" mybtn">Home</a></button>
+                <button class="btn btn-sm me-2" style="border: none;" ><a href="#aboutUs" class=" mybtn">About Us</a></button>
+                <button class="btn btn-sm me-2" style="border: none;"><a href="#franchise" class=" mybtn">Franchise</a></button>
+                <button class="btn btn-primary " style="border: none;"><a href="#contactUs" class="text-white mybtn">Contact Us</a></button>
+                </div>
           </nav><br><br><br>
             <div class="row justify-content-center mb-2 mt-5 mt-lg-0 welcome" >
                 <div class="p-2 col-lg-4 ">
                     <div class="d-flex flex-column align-items-start justify-content-end  ">
-                        <div class=" px-1 mb-1">
-                            <h1 class="main"> Welcome to Norway Kids </h1>
+                        <div class=" px-1 mb-1 main">
+                            <h1 class=""> Welcome to Norway Kids </h1>
                         </div>
                         <div class="px-1 mb-3">
                             <h4 class=""><img src="https://readme-typing-svg.demolab.com?font=Fira+Code&weight=600&size=25&duration=4000&pause=500&color=F72518&random=false&width=435&lines=To+nurture+your+future!" alt="To nurture your future" /></h4>
                         </div>
                         <div class="px-1 mb-3">
-                            <button class="btn btn-primary" type="button"><a href="./contact.html" class="text-white mybtn">Contact Us</a></button>
+                            <button class="btn btn-primary b" type="button"><a href="./contact.html" class="text-white mybtn">Contact Us</a></button>
                         </div>
                       </div>
                 </div>
                 <div class="p-4 col-lg-6">
-                    <img class="headimg" src="preschool.png" >
+                    <img class="headimg" src="./images/preschool.png" >
                 </div>
             </div>
         </div>
     <!-- </div> -->
-    <img src="./Frame.png" alt="" width="100%" height="350px" style="top:0;margin-top:-350px;" >
+    <img src="./images/Frame.png" alt="" width="100%" height="350px" style="top:0;margin-top:-350px;" >
     <div class="container-fluid row justify-content-center mt-5" id="aboutUs">
-        <img class="headimg2 col-lg-5 " width="350px" height="600px" src="about.jpg">
+        <img class="headimg2 col-lg-5 " width="350px" height="600px" src="./images/about.jpg">
         <div class="d-flex flex-column justify-content-start col-lg-4 ms-4 my-auto ">
             <div class="p-2  mb-3">
                 <h2>About Us</h2>
@@ -55,22 +56,49 @@
                 <button class="btn btn-primary" type="button">Learn More</button>
             </div>
         </div>
+        <div id="franchise"></div>
     </div> 
-    <div class="container-fluid bg-dark wave">
+    <div class="container-fluid bg-dark wave" style="opacity: 0.8;">
     </div>
-    <div class="container-fluid mb-5 py-3 bg-dark" id="franchise">4
-        <div class="container-fluid row align-items-center justify-content-center franchise text-center text-white  " >
-            <h1 class="">Franchise</h1>
-            <h3>coming soon...</h3>
+        <div class="container-fluid  py-2 bg-dark" style="opacity: 0.8;" >
+            <div class="container-fluid row align-items-center justify-content-center franchise text-center text-white  " >
+                <h1 class="">Franchise </h1>
+                <h2>All You Need to Get Preschool Franchise Started</h2>
+                <div class="container-fluid row justify-content-center">
+                    <div class="card mx-3 my-1 mycard" style="width: 15rem;height: 19rem;">
+                        <img src="./images/landmark.png" class="card-img-top" style="height:45%;"  alt="...">
+                        <div class="card-body" style="height:55%;" >
+                            <h6 class="text-center">Landmark</h6>
+                            <p class="card-text">Prominent residential area with a mix of independent houses and apartment complexes.</p>
+                        </div>
+                    </div>
+                    <div class="card mx-3 my-1 mycard" style="width: 15rem;height: 19rem;">
+                        <img src="./images/home.png" class="card-img-top" style="height:45%;"  alt="...">
+                        <div class="card-body " style="height:55%;">
+                            <h6 class="text-center">Space</h6>
+                            <p class="card-text">Minimum 1500 Sq. Ft. area with an outdoor play area.</p>
+                        </div>
+                    </div>
+                    <div class="card mx-3 my-1 mycard" style="width: 15rem;height: 19rem;">
+                        <img src="./images/passion.png" class="card-img-top" style="height:45%;"  alt="...">
+                        <div class="card-body" style="height:55%;">
+                            <h6 class="text-center">Passion</h6>
+                            <p class="card-text" >To nurture young minds and a business with sustained returns, provided one has a long-termvision.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
-        <!-- <div class="d-flex flex-column justify-content-start col-lg-3 bg-light" style="max-height: 330px;">
-            <div class="p-2  my-3">
-                <h6 class="">Visit BrainBunny Juniors today and witness the magic of early childhood education. Enroll your child in an enriching, joy-filled learning experience that will prepare them for a lifetime of achievement and happiness.</h6>
-            </div>
-            <div class="p-2 mb-3 text-end">
-               - Alok Yadav<br>(Director) 
-            </div>
-        </div> -->
+    <div class="container-fluid redwave bg-dark" style="opacity: 0.8;" ></div>
+    <div class="container-fluid  flex d-flex justify-content-around text-white py-3 " style="background-color: red; opacity: 0.8;">
+        <div class="fs-3" style="font-weight: 600;">
+            <span>Looking For Preschool Franchise?<br>
+            Partner with Us</span><br>
+            <button class="btn text-white m-2" style="border:white solid 2px;">Call us : 990XXX</button>
+        </div>
+          <button class="text-white my-2 p-2 bg-white b" style="border:white solid 2px; height:50px; width:150px; color:red !important; font-weight: 600;">
+            Enquire Us
+            </button>
     </div>
     <div class="p-3 mybg text-white" id="contactUs">
         <div class="row justify-content-center my-4">
