--- a/franchise.html
+++ b/franchise.html
@@ -14,56 +14,15 @@
     <!-- <div class="container-fluid m-1 "> -->
         <div class="container-fluid my p-0" id="home">
             <nav class="navbar justify-content-around bg-white fixed-top">
-                <a href="./index.html"><img width="400px" height="70px" src="./images/logo2.png" alt="logo image"></a>
+                <a href="./index.html"><img width="350px" height="70px" src="./images/logo2.png" alt="logo image"></a>
                 <div class=" d-flex justify-content-center ">
-                <button class="btn btn-sm me-2" style="border: none;"><a href="./index.html" class=" mybtn">Home</a></button>
+                <button class="btn btn-sm me-2" style="border: none;"><a href="#home" class=" mybtn">Home</a></button>
                 <button class="btn btn-sm me-2" style="border: none;" ><a href="#aboutUs" class=" mybtn">About Us</a></button>
-                <button class="btn btn-sm me-2" style="border: none;"><a href="./franchise.html" class=" mybtn">Franchise</a></button>
-                <button class="btn btn-sm me-2" style="border: none;"><a href="./contact.html" class=" mybtn">Let's Connect</a></button>
-                <!-- <button class="btn btn-primary " style="border: none;"><a href="#contactUs" class="text-white mybtn">Let's Connect</a></button> -->
+                <button class="btn btn-sm me-2" style="border: none;"><a href="#franchise" class=" mybtn">Franchise</a></button>
+                <button class="btn btn-sm me-2" style="border: none;"><a href="#contactUs" class=" mybtn">Let's Connect</a></button>
                 </div>
-          </nav><br><br><br>
-            <div class="row justify-content-center mb-2 mt-5 mt-lg-0 welcome" >
-                <div class="p-2 col-lg-4 mt-3 "> 
-                    <div class="d-flex flex-column align-items-start justify-content-end  ">
-                        <div class=" px-1 mb-1 ms-sm-3 main">
-                            <h1 class="" style="font-family:serif;"> Welcome to Norway Kids </h1>
-                        </div>
-                        <div class="px-1 ms-sm-3">
-                            <h4>
-                                To nurture your future
-                                <!-- <img src="https://readme-typing-svg.demolab.com?font=Fira+Code&weight=600&size=25&duration=4000&pause=500&color=F72518&random=false&width=435&lines=To+nurture+your+future!" alt="To nurture your future" /> -->
-                            </h4>
-                        </div>
-                        <div class="px-1 mb-1 mt-3 ms-sm-3">
-                            <a  class="text-white" href="#contactUs"><button class="btn btn-primary b" >Contact Us</button></a>
-                            <a  class="text-white ms-2" href="./franchise.html" ><button class="btn btn-primary" >Franchise</button></a>                    
-                        </div>
-                    </div>
-                </div>
-                <div class="p-4 col-lg-6 mb-4">
-                    <img class="headimg" src="./images/preschool.png" >
-                </div>
-            </div>
+          </nav><br><br>
         </div>
-    <!-- </div> -->
-    <img src="./images/Frame.png" alt="" width="100%" height="350px" style="top:0;margin-top:-350px;" >
-    <div class="container-fluid row justify-content-center mt-5" >
-        <img class="headimg2 col-lg-5 " width="350px" height="600px" src="./images/about.jpg" id="aboutUs">
-        <div class="d-flex flex-column justify-content-start col-lg-4 ms-4 my-auto ">
-            <div class="p-2 mt-3 mb-1" >
-                <h2>About Us</h2>
-            </div>
-            <div class="p-2 mb-3">
-                <h6>We have a passion for excellence and innovation in preschool education. At the Makoons Preschool, have over 10 years of collective experience in establishing nurseries tailored to the individual needs, talents, abilities and interests of each child.<br>
-                    We hold a fundamental belief about the importance of education and its ability to nurture the development of intelligence through a unique curriculum encompassing music, arts, science, technology, literacy, numeracy and physical exploration.</h6>
-            </div>
-            <div class="p-2">
-                <button class="btn btn-primary" type="button">Learn More</button>
-            </div>
-        </div>
-        <div id="franchise"></div>
-    </div> 
     <div class="container-fluid bg-dark wave" style="opacity: 0.8;">
     </div>
         <div class="container-fluid  py-2 bg-dark" style="opacity: 0.8;" >
