phone number updated

--- a/contact.html
+++ b/contact.html
@@ -63,12 +63,12 @@
             <p class="fs-6 mb-0 foottext">Office Address</p>
         </div>
         <div class="p-1">
-            <p class="fs-6 mb-0 foottext">Delhi
+            <p class="fs-6 mb-0 foottext">Dwarka, New Delhi
 
             </p>
         </div>
         <div class="p-1 ">
-            <p class="fs-6 mb-0 foottext">Mobile: +91-9355191668</p>
+            <p class="fs-6 mb-0 foottext">Mobile: +91 7011232358</p>
         </div>
         <div class="p-1">
             <p class="fs-6 mb-0 foottext">Email: norwaykids@gmail.com</p>
@@ -96,12 +96,12 @@
                         <p class="fs-6 mb-0 foottext">Office Address</p>
                     </div>
                     <div class="p-1">
-                        <p class="fs-6 mb-0 foottext">Delhi
+                        <p class="fs-6 mb-0 foottext">Dwarka, New Delhi
 
                         </p>
                     </div>
                     <div class="p-1 ">
-                        <p class="fs-6 mb-0 foottext">Mobile: +91-9355191668</p>
+                        <p class="fs-6 mb-0 foottext">Mobile: +91 7011232358</p>
                     </div>
                     <div class="p-1">
                         <p class="fs-6 mb-0 foottext">Email: norwaykids@gmail.com</p>
