--- a/franchise.html
+++ b/franchise.html
@@ -16,8 +16,8 @@
             <nav class="navbar justify-content-around bg-white fixed-top">
                 <a href="./index.html"><img width="350px" height="70px" src="./images/logo2.png" alt="logo image"></a>
                 <div class=" d-flex justify-content-center ">
-                <button class="btn btn-sm me-2" style="border: none;"><a href="#home" class=" mybtn">Home</a></button>
-                <button class="btn btn-sm me-2" style="border: none;" ><a href="#aboutUs" class=" mybtn">About Us</a></button>
+                <button class="btn btn-sm me-2" style="border: none;"><a href="./index.html" class=" mybtn">Home</a></button>
+                <!-- <button class="btn btn-sm me-2" style="border: none;" ><a href="#aboutUs" class=" mybtn">About Us</a></button> -->
                 <button class="btn btn-sm me-2" style="border: none;"><a href="#franchise" class=" mybtn">Franchise</a></button>
                 <button class="btn btn-sm me-2" style="border: none;"><a href="#contactUs" class=" mybtn">Let's Connect</a></button>
                 </div>
@@ -86,10 +86,10 @@
                         <p class="fs-6 mb-0 foottext">Office Address</p>
                     </div>
                     <div class="p-1">
-                        <p class="fs-6 mb-0 foottext">New Delhi</p>
+                        <p class="fs-6 mb-0 foottext">Dwarka, New Delhi</p>
                     </div>
                     <div class="p-1 ">
-                        <p class="fs-6 mb-0 foottext">Mobile: +91-12345XXXX</p>
+                        <p class="fs-6 mb-0 foottext">Mobile: +91 7011232358</p>
                     </div>
                     <div class="p-1">
                         <p class="fs-6 mb-0 foottext">Email: norwaykidsindia@gmail.com</p>
