--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <button class="btn btn-sm me-2" style="border: none;"><a href="./index.html" class=" mybtn">Home</a></button>
                 <button class="btn btn-sm me-2" style="border: none;" ><a href="#aboutUs" class=" mybtn">About Us</a></button>
                 <button class="btn btn-sm me-2" style="border: none;"><a href="./franchise.html" class=" mybtn">Franchise</a></button>
-                <button class="btn btn-sm me-2" style="border: none;"><a href="./contact.html" class=" mybtn">Let's Connect</a></button>
+                <button class="btn btn-sm me-2" style="border: none;"><a href="#contactUs" class=" mybtn">Let's Connect</a></button>
                 <!-- <button class="btn btn-primary " style="border: none;"><a href="#contactUs" class="text-white mybtn">Let's Connect</a></button> -->
                 </div>
           </nav><br><br><br>
@@ -100,7 +100,7 @@
         <div class="fs-3" style="font-weight: 600;">
             <span>Looking For Preschool Franchise?<br>
             Partner with Us</span><br>
-            <button class="btn text-white m-2" style="border:white solid 2px;">Call us : 990XXX</button>
+            <button class="btn text-white m-2" style="border:white solid 2px;">Call us : +91 7011232358</button>
         </div>
           <button class="text-white my-2 p-2 bg-white b" style="border:white solid 2px; height:50px; width:150px; color:red !important; font-weight: 600;">
             Enquire Us
@@ -127,10 +127,10 @@
                         <p class="fs-6 mb-0 foottext">Office Address</p>
                     </div>
                     <div class="p-1">
-                        <p class="fs-6 mb-0 foottext">New Delhi</p>
+                        <p class="fs-6 mb-0 foottext">Dwarka, New Delhi</p>
                     </div>
                     <div class="p-1 ">
-                        <p class="fs-6 mb-0 foottext">Mobile: +91-12345XXXX</p>
+                        <p class="fs-6 mb-0 foottext">Mobile: +91 7011232358</p>
                     </div>
                     <div class="p-1">
                         <p class="fs-6 mb-0 foottext">Email: norwaykidsindia@gmail.com</p>
@@ -145,7 +145,7 @@
                     <div class="d-flex flex-row justify-content-around row-gap-3">
                         <a href="#"><i class="fa-brands fa-facebook fa-xl mx-2 text-white"></i></a>
                         <a href="#"><i class="fa-brands fa-square-instagram fa-xl mx-2 text-white"></i></a>
-                        <a href="#"><i class="fa-brands fa-youtube fa-xl mx-2 text-white"></i></a>
+                        <!-- <a href="#"><i class="fa-brands fa-youtube fa-xl mx-2 text-white"></i></a> -->
                         <a href="#"><i class="fa-brands fa-linkedin fa-xl mx-2 text-white"></i></a>
                     </div>
                   </div>
