--- a/index.html
+++ b/index.html
@@ -23,31 +23,30 @@
                 <!-- <button class="btn btn-primary " style="border: none;"><a href="#contactUs" class="text-white mybtn">Let's Connect</a></button> -->
                 </div>
           </nav><br><br><br>
-            <div class="row justify-content-center mb-2 mt-5 mt-lg-0 welcome" >
-                <div class="p-2 col-lg-4 mt-3 "> 
+            <div class="row justify-content-center mb-0 mt-5 mt-lg-0 welcome " >
+                <div class="p-2 col-lg-5 mt-3 "> 
                     <div class="d-flex flex-column align-items-start justify-content-end  ">
                         <div class=" px-1 mb-1 ms-sm-3 main">
-                            <h1 class="" style="font-family:serif;"> Welcome to Norway Kids </h1>
+                            <h1 class="" style="font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;"> Welcome to Norway Kids </h1>
                         </div>
-                        <div class="px-1 ms-sm-3">
+                        <div class="px-1 ms-sm-3 mb-3">
                             <h4>
-                                To nurture your future
+                                Nurturing young buds innovatively...
                                 <!-- <img src="https://readme-typing-svg.demolab.com?font=Fira+Code&weight=600&size=25&duration=4000&pause=500&color=F72518&random=false&width=435&lines=To+nurture+your+future!" alt="To nurture your future" /> -->
                             </h4>
                         </div>
-                        <div class="px-1 mb-1 mt-3 ms-sm-3">
-                            <a  class="text-white" href="#contactUs"><button class="btn btn-primary b" >Contact Us</button></a>
-                            <a  class="text-white ms-2" href="./franchise.html" ><button class="btn btn-primary" >Franchise</button></a>                    
+                        <div class="px-1 mb-0 mt-3 ms-sm-3">
+                            <a href="#contactUs" class="text-white"><button class="btn btn-primary b" >Contact Us</button></a>
+                            <a  href="./franchise.html" class="text-white ms-2" ><button class="btn btn-primary">Franchise</button></a>                    
                         </div>
                     </div>
                 </div>
-                <div class="p-4 col-lg-6 mb-4">
+                <div class="p-4 col-lg-5 mb-0">
                     <img class="headimg" src="./images/preschool.png" >
                 </div>
             </div>
+            <div class="container-fluid whitebubble"></div>
         </div>
-    <!-- </div> -->
-    <img src="./images/Frame.png" alt="" width="100%" height="350px" style="top:0;margin-top:-350px;" >
     <div class="container-fluid row justify-content-center mt-5" >
         <img class="headimg2 col-lg-5 " width="350px" height="600px" src="./images/about.jpg" id="aboutUs">
         <div class="d-flex flex-column justify-content-start col-lg-4 ms-4 my-auto ">
@@ -55,11 +54,12 @@
                 <h2>About Us</h2>
             </div>
             <div class="p-2 mb-3">
-                <h6>We have a passion for excellence and innovation in preschool education. At the Makoons Preschool, have over 10 years of collective experience in establishing nurseries tailored to the individual needs, talents, abilities and interests of each child.<br>
-                    We hold a fundamental belief about the importance of education and its ability to nurture the development of intelligence through a unique curriculum encompassing music, arts, science, technology, literacy, numeracy and physical exploration.</h6>
+                <h6>At NorwayKids, we share our passion and commitment in preschool education through innovative ideas for excellence. We believe in nurturing young buds, by emphasising on individual needs, talents, abilities and interest. We believe that every child needs the best support in enhancing the potential. <br>
+                    NorwayKids's elementary bilingual curriculum is designed to educate the child with music, arts, science, technology, physically, intellectually, socially and emotionally...
+                </h6>
             </div>
             <div class="p-2">
-                <button class="btn btn-primary" type="button">Learn More</button>
+                <a href="./aboutUs.html"><button class="btn btn-primary" type="button">Learn More</button></a>
             </div>
         </div>
         <div id="franchise"></div>
